@@ -9,6 +9,9 @@ New in this Isabelle version
 
 *** General ***
 
+* Inner syntax comments may be written as "\<comment> \<open>text\<close>", similar to
+marginal comments in outer syntax.
+
 * The old 'def' command has been discontinued (legacy since
 Isbelle2016-1). INCOMPATIBILITY, use 'define' instead -- usually with
 object-logic equality or equivalence.
